--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section>Section 2</section>
     <section>Section 3</section>
 
-    <footer>This site Designed by SabzLearn :)</footer>
+    <footer>This site is designed for learning purposes :)</footer>
 
     <script type="text/javascript" src="js/app.js"></script>
   </body>
